--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -12,6 +12,40 @@
   
 {% block main %} 
 
+<!-- ======= Hero Section ======= -->
+<section id="hero">
+    <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
+      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+
+      <div class="carousel-inner" role="listbox">
+
+        <!-- Slide 1 -->
+        <div class="carousel-item active" style="background-image: url(/static/assets/img/slide/slide1.webp)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Ghar ka khana</span></h2>
+              <p class="animate__animated animate__fadeInUp">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis tempora accusantium necessitatibus velit unde ducimus esse aliquam et voluptatum? Reprehenderit, unde deleniti, excepturi esse eos a vero nihil aspernatur sit in laborum error quidem molestias iste autem ex iure adipisci, aut aliquid doloremque quo ea neque. Eveniet labore magnam ut.</p>
+              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+            </div>
+          </div>
+        </div>
+
+        
+
+      </div>
+
+      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+      </a>
+
+      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+      </a>
+
+    </div>
+  </section><!-- End Hero -->
+
 <main id="main">
     
     <!-- ======= Featured Services Section ======= -->
