Integrated ui for tiffin creation

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<title>
   {% block title %} {% endblock %}
+</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
