--- a/templates/base.html
+++ b/templates/base.html
@@ -62,11 +62,19 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          {% if request.user.is_authenticated %}
+            {% if request.user.is_foodie %}
+            <li><a class="nav-link" href="{% url 'foodie:inedx' %}">Home</a></li>
+            {% elif request.user.is_kitchen %}
+            <li><a class="nav-link" href="{% url 'kitchen:index' %}">Home</a></li>
+            {% endif %}
+          <li><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+          {% else %} 
+          <li><a class="nav-link" href="{% url 'foodie:register' %}">Register foodie</a></li>
+          <li><a class="nav-link" href="{% url 'foodie:login' %}">Login foodie</a></li>
+          <li><a class="nav-link" href="{% url 'kitchen:register' %}">Register kitchen</a></li>
+          <li><a class="nav-link" href="{% url 'kitchen:login' %}">Login kitchen</a></li>
+          {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
