--- a/templates/foodie/index.html
+++ b/templates/foodie/index.html
@@ -1,11 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {{ request.user.username }}
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% load static %}
+{% block title %}
+Foodie | Home
+{% endblock %}
+
+{% block main %}
+    <h2>Available Tiffins</h2>
+    <div class="container text-center">
+        <div class="row">
+
+            
+            {% for tiffin in tiffins %}
+            <div class="card col-lg-3 col-md-6 d-flex align-items-stretch bg-light-green m-3" style="width: 18rem;">
+                <img src="{% static 'assets/img/thali/thali1.jpg' %}" class="card-img-top  fix-img" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Tiffin</h5>
+                    <ul class="ul-none">
+
+                        {% for item in tiffin.tiffinitem_set.all %}
+                        <li>{{item.category.name}} : {{item.name}}</li>
+                        {% endfor %}
+                        <li>Price : {{tiffin.price}}</li>
+
+                    </ul>
+                    <button class="form-control">Order</button>
+                </div>
+                
+            </div>
+            {% endfor %}
+
+        </div>
+
+
+    </div>
+
+{% endblock %}
