kitchen templates updated

--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -37,7 +37,7 @@ Kitchen | Home
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 col-md-10 col-sm-11">
-                <div class="card m-4 p-4 shadow rounded">
+                <div class="card mt-4 mb-4 p-4 shadow rounded">
                     <div class="card-body">
                         <h2 class="card-title text-center mb-4">Tifin creation form</h2>
                         <form method="POST">
