--- a/templates/kitchen/login.html
+++ b/templates/kitchen/login.html
@@ -22,7 +22,7 @@
                         </div>
                         {% endfor %}
                         
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-success">Login</button>
                     </form>
                     <div class="text-center mt-3">
                         <p>Don't have an account? <a href="{% url 'kitchen:register'%}">Create one here.</a></p>
