--- a/templates/kitchen/register.html
+++ b/templates/kitchen/register.html
@@ -7,22 +7,22 @@
 {% block main %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-4">
+        <div class="col-md-10">
             <div class="card m-4 p-4 shadow rounded">
                 <div class="card-body">
                     <h2 class="card-title text-center mb-4">Register: kitchen</h2>
                     <form method="POST">
                         {% csrf_token %}
-
-                        {% for field in form %}
-                        <div class="mb-3 text-">
-                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label_tag }}</label>
-                            <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{field.id_for_label}}" name="{{field.name}}">
-                            <div class="invalid-feedback">field.help_text</div>
+                        <div class="row">
+                            {% for field in form %}
+                            <div class="mb-3 col-md-6">
+                                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label_tag }}</label>
+                                <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{field.id_for_label}}" name="{{field.name}}">
+                                <div class="invalid-feedback">field.help_text</div>
+                            </div>
+                            {% endfor %}
                         </div>
-                        {% endfor %}
-                        
-                        <button type="submit" class="btn btn-primary">Register</button>
+                        <button type="submit" class="btn btn-success">Register</button>
                     </form>
                     <div class="text-center mt-3">
                         <p>Already have an account? <a href="{% url 'kitchen:login' %}">Login here</a></p>
