--- a/templates/kitchen/register.html
+++ b/templates/kitchen/register.html
@@ -15,6 +15,13 @@
                         {% csrf_token %}
                         <div class="row">
                             {% for field in form %}
+                            {% if field.errors %}
+
+                                {% for error in field.errors %}
+                                    <div class="error">{{error}}</div>
+                                {% endfor %}
+
+                            {% endif %}
                             <div class="mb-3 col-md-6">
                                 <label for="{{ field.id_for_label }}" class="form-label">{{ field.label_tag }}</label>
                                 <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{field.id_for_label}}" name="{{field.name}}">
