Added error field classes

--- a/templates/kitchen/register.html
+++ b/templates/kitchen/register.html
@@ -18,7 +18,7 @@
                             {% if field.errors %}
 
                                 {% for error in field.errors %}
-                                    <div class="error">{{error}}</div>
+                                    <div class="invalid-feedback">{{error}}</div>
                                 {% endfor %}
 
                             {% endif %}
