--- a/templates/foodie/index.html
+++ b/templates/foodie/index.html
@@ -6,7 +6,7 @@ Foodie | Home
 {% endblock %}
 
 {% block main %}
-    <h2>Available Tiffins</h2>
+    <h2 class="a" style="">Available Tiffins</h2>
     <div class="container text-center">
         <div class="row">
 
@@ -24,7 +24,7 @@ Foodie | Home
                         <li>Price : {{tiffin.price}}</li>
 
                     </ul>
-                    <button class="form-control">Order</button>
+                    <button class="form-control btn btn-success">Order</button>
                 </div>
                 
             </div>
