--- a/templates/kitchen/login.html
+++ b/templates/kitchen/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>Login as kitchen</title>
+Login as kitchen
 {% endblock %}
 
 {% block main %}
