--- a/templates/foodie/login.html
+++ b/templates/foodie/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>Login as foodie</title>
+Login as foodie
 {% endblock %}
 
 {% block main %}
@@ -29,7 +29,7 @@
                         </div>
                         {% endfor %}
                         
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-success">Login</button>
                     </form>
                     <div class="text-center mt-3">
                         <p>Don't have an account? <a href="{% url 'foodie:register'%}">Create one here.</a></p>
