--- a/templates/kitchen/register.html
+++ b/templates/kitchen/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>Register as kitchen</title>
+Register as kitchen
 {% endblock %}
 
 {% block main %}
